--- a/src/comps/mg.css
+++ b/src/comps/mg.css
@@ -46,21 +46,6 @@
    height: 40px;
 }
 
-.meme-form > button {
-   cursor: pointer;
-   border: none;
-   font-family: Courier, monospace;
-   font-size: 25px;
-   letter-spacing: 1.5px;
-   color: white;
-   background: -webkit-linear-gradient(
-      to bottom,
-      #6441a5,
-      #2a0845
-   ); /* Chrome 10-25, Safari 5.1-6 */
-   background: linear-gradient(to bottom, #6441a5, #2a0845);
-}
-
 .meme-form > input::-webkit-input-placeholder {
    /* Chrome/Opera/Safari */
    font-family: Courier, monospace;
@@ -120,6 +105,9 @@
    margin-top: 10px;
    left: 50%;
    transform: translateX(-50%);
+}
+.download,
+.meme-form > button {
    cursor: pointer;
    border: none;
    font-family: Courier, monospace;
