--- a/src/comps/Header/header.css
+++ b/src/comps/Header/header.css
@@ -22,7 +22,7 @@ header > img {
 }
 
 header > p {
-   font-family: monospace;
+   font-family: "DM Mono", monospace;
    color: whitesmoke;
    font-size: 50px;
    margin-left: 10px;
