--- a/src/comps/mg.css
+++ b/src/comps/mg.css
@@ -16,7 +16,7 @@
    transform: translateX(-50%);
    margin: 15px 0;
    padding: 0 5px;
-   font-family: impact, sans-serif;
+   font-family: "DM Mono", monospace;
    font-size: 2em;
    text-transform: uppercase;
    color: white;
@@ -48,35 +48,35 @@
 
 .meme-form > input::-webkit-input-placeholder {
    /* Chrome/Opera/Safari */
-   font-family: Courier, monospace;
+   font-family: "DM Mono", monospace;
    font-size: 25px;
    text-align: center;
 }
 .meme-form > input::-moz-placeholder {
    font-weight: 700;
    /* Firefox 19+ */
-   font-family: Courier, monospace;
+   font-family: "DM Mono", monospace;
    font-size: 25px;
    text-align: center;
 }
 .meme-form > input:-ms-input-placeholder {
    font-weight: 700;
    /* IE 10+ */
-   font-family: Courier, monospace;
+   font-family: "DM Mono", monospace;
    font-size: 25px;
    text-align: center;
 }
 .meme-form > input:-moz-placeholder {
    font-weight: 700;
    /* Firefox 18- */
-   font-family: Courier, monospace;
+   font-family: "DM Mono", monospace;
    font-size: 25px;
    text-align: center;
 }
 .meme-form > input {
    margin-right: 10px;
    font-weight: 700;
-   font-family: Courier, monospace;
+   font-family: "DM Mono", monospace;
    font-size: 25px;
    text-align: center;
 }
@@ -110,7 +110,7 @@
 .meme-form > button {
    cursor: pointer;
    border: none;
-   font-family: Courier, monospace;
+   font-family: "DM Mono", monospace;
    font-size: 25px;
    letter-spacing: 1.5px;
    color: white;
